--- a/css/style.css
+++ b/css/style.css
@@ -12265,16 +12265,17 @@ input {
   background: linear-gradient(to right, #C9E2DC, #076758);
   min-height: calc(100vh - 70px);
   top: 70px;
+  max-width: calc(100% - 255px);
   width: 100%;
-  padding-left: 255px;
+  margin-left: 255px;
   transition: all 0.5s ease;
   border-left: 1px solid #212429;
-  z-index: -1;
 }
 
 @media (max-width: 768px) {
   .sidebar {
     display: none;
+    z-index: 1;
   }
   .sidebar.show {
     display: block;
@@ -12282,7 +12283,8 @@ input {
   }
 
   .main-section {
-    padding-left: 0px;
+    margin-left: 0px;
+    max-width: initial;
   }
 }
 .btn-success {
